--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,13 @@ services:
       - webnet
     environment:
       DB_HOST: 'db_depa'
-      DB_USER: 'root'
-      DB_PASSWORD: 'MYSQL_ROOT_PASSWORD'
+      DB_USER: 'MYSQL_USER'
+      DB_PASSWORD: 'MYSQL_PASSWORD'
       DB_DATABASE: 'EvaluationSheet'
       PORT: 8888
 
   db_depa:
-    image: mysql:8
+    image: mysql:8.4.2
     container_name: db_depa
     restart: always
     volumes:
