--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,16 +20,16 @@ services:
       PORT: 8888
 
   db_depa:
-    image: mysql:8.4.2
+    image: mysql:8
     container_name: db_depa
     restart: always
     volumes:
       - mysql-data:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: 'MYSQL_ROOT_PASSWORD'
+      MYSQL_ROOT_PASSWORD: 'root_password'  # Replace with your root password
       MYSQL_DATABASE: 'EvaluationSheet'
-      MYSQL_USER: 'MYSQL_USER'
-      MYSQL_PASSWORD: 'MYSQL_PASSWORD'
+      MYSQL_USER: 'mysql_user'  # Replace with your desired MySQL user
+      MYSQL_PASSWORD: 'mysql_password'  # Replace with your desired MySQL user password
     ports:
       - "3306:3306"
     networks:
